updated: overflow fixed

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -20,3 +20,7 @@ body {
   padding: 0;
   background-color: #dddddd;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
